[gd_scene load_steps=5 format=3 uid="uid://b7jg3r6hr02df"]

[ext_resource type="PackedScene" uid="uid://bpa53mqxjwk7r" path="res://strategic_mode/tile_events/TileEvent.tscn" id="1_wkrhe"]
[ext_resource type="Script" path="res://strategic_mode/tile_events/town_tile_event.gd" id="2_no6cn"]
[ext_resource type="Texture2D" uid="uid://bgqjde0lpoh7w" path="res://strategic_mode/tile_events/sprites/house.png" id="3_cs5hl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p88yo"]

[node name="TownTileEvent" groups=["InventoryOwner"] instance=ExtResource("1_wkrhe")]
script = ExtResource("2_no6cn")
city = null
local_inventory = null

[node name="Sprite2D" parent="." index="0"]
texture = ExtResource("3_cs5hl")

[node name="EventCollider" parent="." index="1"]
disabled = true

[node name="Area2D" type="Area2D" parent="." index="2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]
shape = SubResource("RectangleShape2D_p88yo")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
